--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
     sdk: flutter
   carousel_slider: ^1.3.1
   cupertino_icons: ^0.1.3
+  google_maps_flutter: ^0.5.27+3
+  http: ^0.12.0+1
+  json_serializable: ^3.3.0
 
 dev_dependencies:
   flutter_test:
@@ -36,17 +39,35 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-assets:
-     - assets/logo.png
-     - assets/widgettwo.png
-     - assets/widgetthree.png
-     - assets/widgetfour.png
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/logo.png
+    - assets/widgetone.jpg
+    - assets/widgettwo.jpg
+    - assets/widgetthree.jpg
+    - assets/widgetfour.jpg
 
-fonts:
-    - family: Poppins
+
+  fonts:
+    - family: JosefinSans
       fonts:
-        - asset: assets/fonts/Poppins-Bold.ttf
-        - asset: assets/fonts/Poppins-Light.ttf
+        - asset: assets/fonts/JosefinSans-Italic-VariableFont_wght.ttf
+        - asset: assets/fonts/JosefinSans-VariableFont_wght.ttf
+        - asset: assets/fonts/JosefinSans-Bold.ttf
+        - asset: assets/fonts/JosefinSans-BoldItalic.ttf
+        - asset: assets/fonts/JosefinSans-ExtraLight.ttf
+        - asset: assets/fonts/JosefinSans-Italic.ttf
+        - asset: assets/fonts/JosefinSans-Light.ttf
+        - asset: assets/fonts/JosefinSans-Medium.ttf
+        - asset: assets/fonts/JosefinSans-Regular.ttf
+        - asset: assets/fonts/JosefinSans-SemiBold.ttf
+        - asset: assets/fonts/JosefinSans-Thin.ttf
+
+
+
+
+
+
+
+
 
 
